# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Id: $

  06 Feb 2008; Andrew Gaffney <agaffney@gentoo.org>
  modules/netboot2_target.py:
  Allow root_overlay in netboot2 target for bug 208106.

  04 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/generic_stage_target.py, modules/livecd_stage1_target.py,
  targets/stage1/stage1-chroot.sh, targets/support/chroot-functions.sh:
  Added USE=bindist automatically to everything that inherits set_use from
  generic_stage_target, added USE=bindist to livecd_stage1_target, added
  USE=bindist to emerge run for stage1, and did some minor cleanup in
  get_libdir in chroot-functions.

  03 Feb 2008; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/bootloader-setup.sh:
  Add splashimage= line to grub.conf if /boot/grub/splash.xpm.gz exists

  02 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  examples/generic_stage_template.spec, examples/grp_template.spec,
  examples/livecd-stage1_template.spec,
  examples/livecd-stage2_template.spec, examples/netboot_template.spec,
  examples/stage4_template.spec, examples/tinderbox_template.spec:
  Changing link so it no longer points to a dead page.  This is for bug #208609.

  02 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/snapshot_target.py:
  Add .svn to the catalyst snapshot excludes and remove old pordir_overlay code.

  02 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-chroot.sh:
  As much as I hate this, we're going to force baselayout to install first.
  This will keep us from having any issues with packages that don't respect
  multilib libdirs.

  02 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> files/catalyst.conf:
  Reorder options in catalyst.conf so they're alphabetical.

  02 Feb 2008; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/bootloader-setup.sh:
  Add 'pager on' to grub.conf for bug 208531

  02 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>